--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
         </div>
         
         <div class="score">0</div>
-        <div class="playground">
-            <ul></ul>
+        <div class="box">
+            <div class="playground">
+                <ul></ul>
+                <ul id="player2"></ul>
+            </div>
         </div>
     </div>
     <script src="js/app.js" type="module"></script>
+    <script src="js/player2.js" type="module"></script>
 </body>
 </html>
