--- a/MultiTetris/public/index.html
+++ b/MultiTetris/public/index.html
@@ -8,7 +8,7 @@
   <title>Tetris</title>
 </head>
 <body>
-  <h1>Hello</h1>
+  <div id="score"></div>
   <canvas id="tetris" width="240" height="400"></canvas>
   <script src="./tetris.js"></script>
 </body>
