--- a/MultiTetris/public/index.html
+++ b/MultiTetris/public/index.html
@@ -10,6 +10,9 @@
 <body>
   <div id="score"></div>
   <canvas id="tetris" width="240" height="400"></canvas>
+  <script src="./Player.js"></script>
+  <script src="./arena.js"></script>
   <script src="./tetris.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
