--- a/MultiTetris/public/index.html
+++ b/MultiTetris/public/index.html
@@ -8,8 +8,17 @@
   <title>Tetris</title>
 </head>
 <body>
-  <div id="score"></div>
-  <canvas id="tetris" width="240" height="400"></canvas>
+  <div class="player">
+    <div id="score"></div>
+    <canvas id="tetris" width="240" height="400"></canvas>
+  </div>
+  
+  <div class="player">
+    <div id="score"></div>
+    <canvas id="tetris" width="240" height="400"></canvas>
+  </div>
+
+
   <script src="./Player.js"></script>
   <script src="./arena.js"></script>
   <script src="./tetris.js"></script>
