--- a/MultiTetris/public/index.html
+++ b/MultiTetris/public/index.html
@@ -8,17 +8,15 @@
   <title>Tetris</title>
 </head>
 <body>
-  <div class="player">
-    <div id="score"></div>
-    <canvas id="tetris" width="240" height="400"></canvas>
-  </div>
+  <template id="player-template">
+    <div class="player">
+      <div id="score"></div>
+      <canvas id="tetris" width="240" height="400"></canvas>
+    </div>
+  </template>
   
-  <div class="player">
-    <div id="score"></div>
-    <canvas id="tetris" width="240" height="400"></canvas>
-  </div>
-
-
+  <script src="./tetrisManager.js"></script>
+  <script src="./connectionManager.js"></script>
   <script src="./Player.js"></script>
   <script src="./arena.js"></script>
   <script src="./tetris.js"></script>
