--- a/MultiTetris/public/index.html
+++ b/MultiTetris/public/index.html
@@ -19,6 +19,7 @@
   <script src="./connectionManager.js"></script>
   <script src="./Player.js"></script>
   <script src="./arena.js"></script>
+  <script src="./event.js"></script>
   <script src="./tetris.js"></script>
   <script src="./main.js"></script>
 </body>
